# minna-no-nihongo-anki

./: .env.example  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
docs/: style.css
docs/data/: vocab.json
scripts/: publish.sh
src/mnn/: __init__.py  __main__.py  cli.py  config.py  log.py  paths.py  verify.py
src/mnn/commands/: all_pipeline.py  doctor.py  enrich_all.py  purge.py  scrape.py  serve.py  verify_jisho.py
src/mnn/deck/: builder.py  info.py  models.py  templates.py  themes.py
src/mnn/enrich/: audio.py  clean.py  fill_kanji.py  kanji_svg.py  meanings_bn.py  mnemonics.py  mnemonics_bn.py  pitch.py  quiz.py  sentences.py  sentences_bn.py
src/mnn/sources/: jisho.py  kanjium.py  kanjivg.py  learnjapaneseaz.py  llm.py  pixabay.py  tatoeba.py
src/mnn/util/: hashing.py  io.py  progress.py
src/mnn/web/: builder.py
src/mnn/web/static/: app.js  index.html  style.css
