[project]
name = "mnn-vocab"
version = "0.1.0"
description = "Minna no Nihongo enriched Anki deck generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pavel", email = "contact@iampavel.dev" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "genanki>=0.13",
  "requests>=2.32",
  "aiohttp>=3.9",
  "beautifulsoup4>=4.12",
  "edge-tts>=7.0",
  "openai>=1.40",
]

[project.scripts]
mnn = "mnn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnn"]

[tool.uv]
package = true
